--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-APP_NAME=ReviewService
+APP_NAME="Anambra Can Be Better"
 APP_ENV=production
 APP_KEY=base64:C/8o+WY6CMF1ArOJbUiE2V3t07e14bac7Z/dwqJ5UGQ=
 APP_DEBUG=false
-APP_URL=http://reviewservicenow.club/
+APP_URL=http://anambracanbebetter.com/
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=ReviewService
+DB_DATABASE=acbb
 DB_USERNAME=root
 DB_PASSWORD=
 
