tuesday afternoon coding

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME="Anambra Can Be Better"
 APP_ENV=production
 APP_KEY=base64:C/8o+WY6CMF1ArOJbUiE2V3t07e14bac7Z/dwqJ5UGQ=
-APP_DEBUG=false
-APP_URL=http://anambracanbebetter.com/
+APP_DEBUG=true
+APP_URL=https://anambracanbebetter.com/
 
 LOG_CHANNEL=stack
 
